--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.ico" type="images/x-icon" />  
-    <title>Nico à 40 ans !</title>
+    <link rel="shortcut icon" href="favicon.ico" type="images/x-icon" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Nico à-t-il 40 ans ?</title>
+    <script src="js/script.js"></script>
 </head>
 
 
 <body>
-    
+    <div class="container">
+        <h1>Dans combien de temps <span>Nico</span> aura <span>40 ans</span>?</h1>
+        <button id="button">Voir</button>
+        <h5 id="peur">(et avoir peur)</h5>
+        <p id="texte"></p>
+        <p id="compteur"></p>
+    </div>
+
 </body>
 
 </html>
